Add search option

--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
     <button onclick="checkFamilyShare()">Check</button>
     <div id="result">Enter a Steam App Link and click Check to see if it's sharable.</div>
 
+    <h2>Search Games</h2>
+    <input type="text" id="searchInput" placeholder="Enter game name">
+    <button onclick="searchGames()">Search</button>
+    <button onclick="clearSearchResults()">Clear search results</button>
+    <div id="gameList"></div>
+
     <script src="script.js"></script>
+    <script src="search.js"></script>
 </body>
 </html>
