--- a/index.html
+++ b/index.html
@@ -4,6 +4,75 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Steam Family Share Checker</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #333; /* Dark gray background */
+            color: #fff; /* White text */
+            transition: background-color 0.3s, color 0.3s;
+        }
+
+        h1, h2 {
+            color: #007bff; /* Blue headings */
+        }
+
+        input[type="text"] {
+            padding: 8px;
+            margin: 5px;
+            border: 1px solid #666; /* Darker gray border */
+            border-radius: 4px;
+            background-color: #444; /* Dark gray input background */
+            color: #fff; /* White text */
+        }
+
+        button {
+            padding: 8px 12px;
+            margin: 5px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            background-color: #007bff; /* Blue button */
+            color: #fff; /* White text */
+            transition: background-color 0.3s, color 0.3s;
+        }
+
+        button:hover {
+            background-color: #0056b3; /* Darker blue on hover */
+        }
+
+        #gameList {
+            margin-top: 20px;
+        }
+
+        .gameItem {
+            margin-bottom: 10px;
+            padding: 10px;
+            background-color: #444; /* Dark gray background for game items */
+            border: 1px solid #666; /* Darker gray border */
+            border-radius: 4px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            transition: background-color 0.3s, box-shadow 0.3s;
+        }
+
+        .gameItem:hover {
+            background-color: #555; /* Slightly darker background on hover */
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2); /* Slightly darker shadow on hover */
+        }
+
+        .credits {
+            margin-top: 20px;
+            font-size: 12px;
+            opacity: 0.7;
+        }
+
+        .credits a {
+            color: #fff;
+        }
+
+        .credits a:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
     <h1>Steam Family Share Checker</h1>
@@ -16,6 +85,10 @@
     <button onclick="searchGames()">Search</button>
     <button onclick="clearSearchResults()">Clear search results</button>
     <div id="gameList"></div>
+
+    <div class="credits">
+        <p>Created by <a href="https://github.com/tfurci" target="_blank">tfurci</a>. <a href="https://github.com/tfurci/steam-family-share-checker" target="_blank">GitHub Repository</a></p>
+    </div>
 
     <script src="script.js"></script>
     <script src="search.js"></script>
