--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <h1>Steam Family Share Checker</h1>
     <input type="text" id="appLinkInput" placeholder="Enter Steam App Link">
     <button onclick="checkFamilyShare()">Check</button>
-    <div id="result">Enter a Steam App Link and click Check to see if it's sharable.</div>
+    <div id="result">Input a Steam game's link to see if it's family sharable.</div>
 
     <h2>Search Games</h2>
     <input type="text" id="searchInput" placeholder="Enter game name">
