Add fetching data animation

--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
     <input type="text" id="searchInput" placeholder="Enter game name">
     <button onclick="searchGames()">Search</button>
     <button onclick="clearSearchResults()">Clear search results</button>
+    <div id="searchStatus" style="color: white;"></div>
     <div id="gameList"></div>
 
     <div class="credits">
