Display status next to result text

--- a/index.html
+++ b/index.html
@@ -78,7 +78,10 @@
     <h1>Steam Family Share Checker</h1>
     <input type="text" id="appLinkInput" placeholder="Enter Steam App Link">
     <button onclick="checkFamilyShare()">Check</button>
-    <div id="result">Input a Steam game's link to see if it's family sharable.</div>
+    <div id="result" style="padding-top:10px">Input a Steam game's link to see if it's family sharable.</div>
+    <div id="familyShareStatus" style="display: none;padding-top:10px">
+        Status: <span id="statusIndicator">&#9744;</span>
+    </div>
 
     <h2>Search Games</h2>
     <input type="text" id="searchInput" placeholder="Enter game name">
