--- a/index.html
+++ b/index.html
@@ -96,5 +96,6 @@
 
     <script src="script.js"></script>
     <script src="search.js"></script>
+    <script src="functions.js"></script>
 </body>
 </html>
