Support for raw app id's

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 </head>
 <body>
     <h1>Steam Family Share Checker</h1>
-    <input type="text" id="appLinkInput" placeholder="Enter Steam App Link">
+    <input type="text" id="appLinkInput" placeholder="Enter Steam App Link/ID">
     <button onclick="checkFamilyShare()">Check</button>
     <div id="result" style="padding-top:10px">Input a Steam game's link to see if it's family sharable.</div>
     <div id="familyShareStatus" style="display: none;padding-top:10px">
