--- a/index.html
+++ b/index.html
@@ -95,9 +95,18 @@
         <p>Created by <a href="https://github.com/tfurci" target="_blank">tfurci</a>. <a href="https://github.com/tfurci/steam-family-share-checker" target="_blank">GitHub Repository</a></p>
     </div>
 
+    <div id="appStatus" style="padding-top:5px">
+        Server status: <span id="statusIndicator" style="font-size: 10px;">🔴</span>
+    </div>
+
     <script src="script.js"></script>
     <script src="search.js"></script>
     <script src="functions.js"></script>
     <script src="customappid.js"></script>
+    <script>
+        window.onload = function() {
+            checkAppStatus();
+        };
+    </script>
 </body>
 </html>
