--- a/index.html
+++ b/index.html
@@ -104,9 +104,7 @@
     <script src="functions.js"></script>
     <script src="customappid.js"></script>
     <script>
-        window.onload = function() {
-            checkAppStatus();
-        };
+        window.onload = checkAppStatus();
     </script>
 </body>
 </html>
