fix duplicate statusIndicator

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     </div>
 
     <div id="appStatus" style="padding-top:5px">
-        Server status: <span id="statusIndicator" style="font-size: 10px;">🔴</span>
+        Server status: <span id="fetchstatusIndicator" style="font-size: 10px;">🟠</span>
     </div>
 
     <script src="script.js"></script>
