Fix github name change

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <div id="gameList"></div>
 
     <div class="credits">
-        <p>Created by <a href="https://github.com/tfurci" target="_blank">tfurci</a>. <a href="https://github.com/tfurci/steam-family-share-checker" target="_blank">GitHub Repository</a></p>
+        <p>Created by <a href="https://github.com/tfourj" target="_blank">tfourj</a>. <a href="https://github.com/tfourj/steam-family-share-checker" target="_blank">GitHub Repository</a></p>
     </div>
 
     <div id="appStatus">
